ags (4.4.0)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented ags_sound_resource_read_audio_signal_at_once() giving more accurate resampling

ags (4.3.4)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved functional test termination
	* refactored ags_functional_audio_config_test.c
	* refactored ags_functional_loop_000_xml_test.c
	* refactored ags_functional_loop_001_xml_test.c
	* refactored ags_functional_loop_002_xml_test.c
	* refactored ags_functional_loop_003_xml_test.c
	* refactored ags_functional_loop_004_xml_test.c
	* refactored ags_functional_loop_005_xml_test.c
	* refactored ags_functional_loop_006_xml_test.c
	* refactored ags_functional_loop_007_xml_test.c
	* refactored ags_functional_loop_008_xml_test.c
	* refactored ags_functional_loop_010_xml_test.c

ags (4.3.3)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed executables in ags_check_system_functional_programs_ui

ags (4.3.2)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed typo in *.appdata.xml

ags (4.3.1)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* minor bug-fixes
	* added ags_functional_spectrometer_test.c
	* added ags_functional_equalizer10_test.c
	* added ags_functional_fm_synth_test.c
	* added ags_functional_syncsynth_test.c
	* added ags_functional_fm_syncsynth_test.c
	* added ags_functional_hybrid_fm_synth_test.c
	* added ags_functional_sf2_synth_test.c
	* added ags_functional_pitch_sampler_test.c
	* added ags_functional_sfz_synth_test.c

ags (4.3.0)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* reverted missing pulseaudio server
	* refactored ags_functional_notation_editor_workflow_test.c
	* refactored ags_functional_automation_editor_workflow_test.c
	* refactored ags_functional_panel_test.c
	* refactored ags_functional_mixer_test.c
	* refactored ags_functional_drum_test.c
	* refactored ags_functional_matrix_test.c
	* refactored ags_functional_synth_test.c