@@ -2650,6 +2650,9 @@ ags_audio_thread_get_staging_program
 ags_audio_thread_set_staging_program
 ags_audio_thread_new
 ags_export_thread_get_type
+ags_export_thread_test_flags
+ags_export_thread_set_flags
+ags_export_thread_unset_flags
 ags_export_thread_find_soundcard
 ags_export_thread_new
 ags_wave_loader_get_type
